[gd_scene load_steps=9 format=3 uid="uid://dmdpvvlx8kuo2"]

[ext_resource type="Script" uid="uid://fi8m4jjucw57" path="res://scenes/game/behind_minigame/behind_minigame.gd" id="1_6a4mt"]
[ext_resource type="AudioStream" uid="uid://c217unmxemgn3" path="res://assets/audio/music/minigame.mp3" id="2_2m54i"]
[ext_resource type="Shader" uid="uid://chn7s1u7nbjck" path="res://resources/vignette.gdshader" id="3_2m54i"]
[ext_resource type="PackedScene" uid="uid://dhkuvc7jstuif" path="res://scenes/circle/circle.tscn" id="3_i41h5"]

[sub_resource type="Animation" id="Animation_msp2d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vignette:material:shader_parameter/vignette_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}

[sub_resource type="Animation" id="Animation_2m54i"]
resource_name = "vignette"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Vignette:material:shader_parameter/vignette_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(-2, -2, 1),
"update": 0,
"values": [0.150000007125, 0.5, 0.15003411588227838]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i41h5"]
_data = {
&"RESET": SubResource("Animation_msp2d"),
&"vignette": SubResource("Animation_2m54i")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i41h5"]
shader = ExtResource("3_2m54i")
shader_parameter/vignette_intensity = 0.5
shader_parameter/vignette_opacity = 0.5
shader_parameter/vignette_rgb = Color(0, 0, 0, 1)

[node name="BehindMinigame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6a4mt")

[node name="BumpTimer" type="Timer" parent="."]

[node name="GameTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_i41h5")
}
autoplay = "vignette"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_2m54i")
volume_db = -10.0
mix_target = 1
bus = &"Music"

[node name="Progress" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 61.5
offset_right = 200.0
offset_bottom = 76.5
grow_horizontal = 2
grow_vertical = 2
value = 50.0
show_percentage = false

[node name="MouseCircle" parent="." instance=ExtResource("3_i41h5")]
layout_mode = 1
radius = 18.0
thickness = 3.0
filled = true

[node name="Circle" parent="." instance=ExtResource("3_i41h5")]
layout_mode = 1
radius = 35.0
thickness = 3.5

[node name="Vignette" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_i41h5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="timeout" from="BumpTimer" to="." method="_on_bump_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
